--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
   ],
   "dependencies": {
     "@amap/amap-jsapi-loader": "^1.0.1",
-    "@ctrl/tinycolor": "^3.4.0",
+    "@ctrl/tinycolor": "^3.4.1",
     "@logicflow/core": "^1.1.14",
     "@logicflow/extension": "^1.1.14",
     "@pureadmin/components": "^1.0.6",
@@ -40,12 +40,13 @@
     "animate.css": "^4.1.1",
     "axios": "^0.26.1",
     "cropperjs": "^1.5.12",
+    "crypto-js": "^4.1.1",
     "css-color-function": "^1.3.3",
-    "dayjs": "^1.11.0",
+    "dayjs": "^1.11.1",
     "driver.js": "^0.9.8",
     "echarts": "^5.3.2",
     "element-plus": "^2.1.10",
-    "element-resize-detector": "^1.2.3",
+    "element-resize-detector": "^1.2.4",
     "js-cookie": "^3.0.1",
     "jsbarcode": "^3.11.5",
     "lodash": "^4.17.21",
@@ -57,7 +58,7 @@
     "path": "^0.12.7",
     "pinia": "^2.0.13",
     "qrcode": "^1.5.0",
-    "qs": "^6.10.1",
+    "qs": "^6.10.3",
     "resize-observer-polyfill": "^1.5.1",
     "responsive-storage": "^1.0.11",
     "rgb-hex": "^4.0.0",
@@ -71,16 +72,16 @@
     "vuedraggable": "4.1.0",
     "vxe-table": "^4.2.0",
     "xe-utils": "^3.5.4",
-    "xgplayer": "^2.31.4"
+    "xgplayer": "^2.31.6"
   },
   "devDependencies": {
-    "@commitlint/cli": "13.1.0",
-    "@commitlint/config-conventional": "13.1.0",
+    "@commitlint/cli": "16.2.3",
+    "@commitlint/config-conventional": "16.2.1",
     "@iconify-icons/carbon": "^1.2.4",
     "@iconify-icons/ep": "^1.2.4",
     "@iconify-icons/fa": "^1.2.2",
     "@iconify-icons/fa-solid": "^1.2.2",
-    "@iconify-icons/fluent": "^1.2.5",
+    "@iconify-icons/fluent": "^1.2.6",
     "@iconify-icons/mdi": "^1.2.8",
     "@iconify-icons/ri": "^1.2.1",
     "@iconify-icons/uil": "^1.2.1",
@@ -91,13 +92,13 @@
     "@types/js-cookie": "^3.0.1",
     "@types/lodash": "^4.14.180",
     "@types/lodash-es": "^4.17.6",
-    "@types/mockjs": "1.0.3",
-    "@types/node": "14.14.14",
+    "@types/mockjs": "1.0.6",
+    "@types/node": "17.0.25",
     "@types/nprogress": "0.2.0",
     "@types/qrcode": "^1.4.2",
     "@types/qs": "^6.9.7",
-    "@typescript-eslint/eslint-plugin": "^5.10.2",
-    "@typescript-eslint/parser": "^5.10.2",
+    "@typescript-eslint/eslint-plugin": "^5.20.0",
+    "@typescript-eslint/parser": "^5.20.0",
     "@vitejs/plugin-legacy": "^1.8.1",
     "@vitejs/plugin-vue": "^2.3.1",
     "@vitejs/plugin-vue-jsx": "^1.3.10",
@@ -105,36 +106,36 @@
     "@vue/eslint-config-typescript": "^10.0.0",
     "autoprefixer": "^10.4.5",
     "cross-env": "7.0.3",
-    "eslint": "^8.8.0",
+    "eslint": "^8.13.0",
     "eslint-plugin-prettier": "^4.0.0",
-    "eslint-plugin-vue": "^8.4.1",
+    "eslint-plugin-vue": "^8.6.0",
     "font-awesome": "^4.7.0",
     "husky": "^7.0.4",
-    "lint-staged": "11.1.2",
+    "lint-staged": "12.3.8",
     "picocolors": "^1.0.0",
-    "postcss": "^8.4.6",
-    "postcss-html": "^1.3.0",
-    "postcss-import": "14.0.0",
+    "postcss": "^8.4.12",
+    "postcss-html": "^1.4.1",
+    "postcss-import": "14.1.0",
     "postcss-scss": "^4.0.3",
-    "prettier": "^2.5.1",
-    "pretty-quick": "3.1.1",
+    "prettier": "^2.6.2",
+    "pretty-quick": "3.1.3",
     "rimraf": "3.0.2",
-    "rollup": "^2.70.1",
+    "rollup": "^2.70.2",
     "rollup-plugin-visualizer": "^5.6.0",
     "sass": "^1.50.1",
-    "stylelint": "^14.3.0",
+    "sass-loader": "^12.6.0",
+    "stylelint": "^14.7.1",
     "stylelint-config-html": "^1.0.0",
     "stylelint-config-prettier": "^9.0.3",
-    "stylelint-config-recommended": "^6.0.0",
-    "stylelint-config-standard": "^24.0.0",
+    "stylelint-config-recommended": "^7.0.0",
+    "stylelint-config-standard": "^25.0.0",
     "stylelint-order": "^5.0.0",
     "typescript": "^4.6.3",
     "vite": "^2.9.5",
     "vite-plugin-mock": "^2.9.6",
-    "vite-plugin-remove-console": "^0.0.7",
     "vite-plugin-windicss": "^1.8.4",
-    "vite-svg-loader": "2.2.0",
-    "vue-eslint-parser": "^8.2.0",
+    "vite-svg-loader": "3.2.0",
+    "vue-eslint-parser": "^8.3.0",
     "windicss": "^3.5.1"
   },
   "repository": "git@github.com:xiaoxian521/vue-pure-admin.git",
