--- a/public/serverConfig.json
+++ b/public/serverConfig.json
@@ -14,7 +14,7 @@
   "HideTabs": false,
   "SidebarStatus": true,
   "EpThemeColor": "#409EFF",
-  "ShowLogo": true,
+  "ShowLogo": false,
   "ShowModel": "smart",
   "MapConfigure": {
     "amapKey": "97b3248d1553172e81f168cf94ea667e",
